frontend: Remove `register file` and integrate it into `register`
This changes how users define register files.
Previously `register file` was used to specify a register using a mapping type.
As we move into the direction of multidimensional types, also on registers, register files are now also defined using the `register` definition.